--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "chart.js": "^4.4.3",
+    "express": "^4.19.2",
     "formidable": "^3.5.1",
     "fs": "^0.0.1-security",
+    "ml-regression": "^5.0.0",
     "mongoose": "^8.5.1",
     "next": "14.2.5",
+    "next-on-netlify": "^2.7.2",
+    "papaparse": "^5.4.1",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-scroll": "^1.9.0"
   },
   "devDependencies": {
